# Anzhc-s-Dataset-Tagger

./: .gitignore  README.md  build-linux.sh  build-win.bat  launch-linux.sh  launch-win.bat  main.py  pyproject.toml  requirements.txt  setup-linux.sh  setup-win.bat
.github/workflows/: build_packages.yml  build_pcakages.yml
src/: imgbrowser.py  layout.py  main.py  scrollarea.py  stylesheet.py
